--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <meta name="google" content="nositelinkssearchbox" />
 <meta name="description" content="" />	
 
+<script data-ad-client="ca-pub-4475313918146412" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
