--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 			display: inline-block;
 			padding-top: 0.01%;
  			padding-bottom: 4%;
-			background-color: #f5f5f5;
+			background-color: #000000;
  		}
-/* Best Color (tan): #ebe1df */
+		
+/* Best Color (tan): #ebe1df or f5f5f5 */
 
 #header {
     background: #f5f5f5;
@@ -69,6 +70,10 @@ display: inline-block;
     padding-bottom: 10%
    }		
 }
-</head>
+
+		</head>
+		<body> 
+		<script data-ad-client="ca-pub-4475313918146412" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		</body>
 	
 </html>
