--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ display: inline-block;
 		
 		<body> 
 		<body style = ".main;">
-		Kishy
+		<h1 style="color:blue;">This is a heading</h1>
+		<h1 style = "color:blue;"> Kishy</h1>
 		</body>
 	
 </html>
