--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html lang="en-US">
-<html manifest="bonfiredrops.appcache">
+/* <html manifest="kishydreams.appcache"> */ 
         
 
 <head>
@@ -70,7 +70,7 @@ display: inline-block;
     padding-bottom: 10%
    }		
 }
-
+     </style>	
 		</head>
 		
 		<body> 
