--- a/index.html
+++ b/index.html
@@ -73,16 +73,10 @@ display: inline-block;
      </style>	
 		</head>
 		
-		<body> 
-		<body style = ".main;">
-		<h1 style="color:blue;">This is a heading</h1>
-		<h1 style = "color:blue;"> Kishy</h1>
-		</body>
-		
 			
 <!-- Header -->	
 <div class="h1">
-<center> <p> <div style="font-family: Roboto:900, serif; font-size: 72px;">Kishy</div></p> </left>  	
+<center> <p> <div style="font-family: Roboto:900, serif; color: white; font-size: 48px;">Kishy</div></p> </left>  	
 <br> 
 </div>	
 <!-- End Header -->
