--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
         
 
 <head>
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122838990-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-122838990-2');
 </script>
-
+	
 	<title>Kishy Dreams</title>
 	<meta charset="UTF-8">
 	<meta name="author" content="Kishy Dreams">
