--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ display: inline-block;
 			
 <!-- Header -->	
 <div class="h1">
-<center> <p> <div style="font-family: Roboto:900, serif; color: white; font-size: 48px;">Kishy</div></p> </left>  	
+<center> <p> <div style="font-family: sans-serif; color: white; font-size: 48px;">Kishy</div></p> </left>  	
 <br> 
 </div>	
 <!-- End Header -->
