--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@ display: inline-block;
 <br> 
 </div>	
 <!-- End Header -->
-		
+<body>
 	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4475313918146412"
+     data-ad-slot="7882752154"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	</body>
 </html>
