--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html lang="en-US">
-/* <html manifest="kishydreams.appcache"> */ 
+<html manifest="kishydreams.appcache">
         
 
 <head>
@@ -86,7 +86,9 @@ display: inline-block;
 <!-- Header -->	
 <div class="h1">
 <center> <p> <div style="font-family: sans-serif; color: white; font-size: 48px;">Kishy</div></p> </left>  	
-<br> 
+
+	<br> 
+	
 </div>	
 <!-- End Header -->
 <body>
