--- a/index.html
+++ b/index.html
@@ -103,5 +103,19 @@ display: inline-block;
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+div class="verticalhorizontal">
+	<p class="aligncenter">
+    <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
+</p>
+</div>	
+	<style>
+.verticalhorizontal {
+    display: table-cell;
+    height: 300px;
+    text-align: center;
+    width: 300px;
+    vertical-align: middle;
+}
+</style>
 	</body>
 </html>
