--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ display: inline-block;
 div class="verticalhorizontal">
 	<p class="aligncenter">
     <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
+		<br>
+		<br>
+	<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
 </p>
 </div>	
 	<style>
