--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@ display: inline-block;
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-div class="verticalhorizontal">
+	
+<div class="verticalhorizontal">
 	<p class="aligncenter">
     <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
 		<br>
