--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 		
 /* Best Color (tan): #ebe1df or f5f5f5 */
 .verticalhorizontal {
-    display: table-cell;
+    display: flex;
     height: 300px;
     text-align: center;
-    width: 300px;
+    width: 400px;
     vertical-align: middle;
 }
 
@@ -112,12 +112,11 @@ display: inline-block;
 </script>
 	
 <div class="verticalhorizontal">
-	<p class="aligncenter">
-    <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
+  <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
 		<br>
 		<br>
-	<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
-</p>
+<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
+
 </div>	
 	<style>
 
