--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ display: inline-block;
 </script>
 	
 <div class="verticalhorizontal">
-  <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
-		<br>
-		<br>
-<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
-
+<img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
+<br>
 </div>	
-	<style>
+<br>
+<div class="verticalhorizontal">
+<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
+</div>	
 
 	</body>
 </html>
