--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
  		}
 		
 /* Best Color (tan): #ebe1df or f5f5f5 */
+		
 .verticalhorizontal {
-    display: flex;
+    display: inline-block;
     height: 300px;
     text-align: center;
     width: 400px;
