--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 	
 	<style>
  		body {
-			display: inline-block;
 			padding-top: 0.01%;
  			padding-bottom: 4%;
 			background-color: #000000;
@@ -49,10 +48,10 @@
 /* Best Color (tan): #ebe1df or f5f5f5 */
 		
 .verticalhorizontal {
-    display: inline-block;
-    height: 300px;
+    display: cover;
+    height: 25%;
     text-align: center;
-    width: 400px;
+    width: 25%;
     vertical-align: middle;
 }
 
