--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ display: inline-block;
 
 <body>
 <!-- Header -->	
-<center> <p> <div style="font-family: sans-serif; color: white; font-size: 72px;">Kishy</div></p> </left>  	
+<p><div style="font-family: sans-serif; color: white; font-size: 72px;">Kishy</div></p> </left>  	
 	<br> 
 <!-- End Header -->	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
