--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 		
 .verticalhorizontal {
     display: cover;
-    height: 5%;
+    height: 100px;
     text-align: center;
-    width: 5%;
+    width: 150px;
     vertical-align: middle;
 }
 
