--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 /* Best Color (tan): #ebe1df or f5f5f5 */
 		
 .verticalhorizontal {
-    display: cover;
-    height: 100px;
-    text-align: center;
-    width: 150px;
-    vertical-align: middle;
+  float: right;
+  max-width: 25%;
+  width: 500px;
 }
 
      </style>	
