--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 /* Best Color (tan): #ebe1df or f5f5f5 */
 		
 .verticalhorizontal {
-  float: right;
-  max-width: 25%;
-  width: 500px;
+  max-width: 10%;
+	max-height: 5%;
 }
 
      </style>	
@@ -75,12 +74,14 @@
 </script>
 	
 <div class="verticalhorizontal">
-<img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg" alt="centered image" />
-<br>
+<img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg"/>
+
 </div>	
 <br>
+	<br>
+	<br>
 <div class="verticalhorizontal">
-<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg" alt="centered image" />	
+<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg"/>	
 </div>	
 
 	</body>
