--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 /* Best Color (tan): #ebe1df or f5f5f5 */
 		
 .verticalhorizontal {
-  max-width: 2%;
-	max-height: 1%;
+  max-width: 150px;
+	max-height: 100px;
 }
 
      </style>	
