--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
   max-width: 150px;
 	max-height: 100px;
 }
-
+.responsive {
+  width: 100%;
+  max-width: 150px;
+  height: auto;
+}
      </style>	
 
 
@@ -75,14 +79,14 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 	
-<div class="verticalhorizontal">
+<div class="responsive">
 <img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg"/>
 
 </div>	
 <br>
 	<br>
 	<br>
-<div class="verticalhorizontal">
+<div class="responsive">
 <img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg"/>	
 </div>	
 
