--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 <script data-ad-client="ca-pub-4475313918146412" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
-<meta name="viewport" content="width=device-width, initial-scale=0.5">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,user-scalable=1, height = device-height" />
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
 		crossorigin="anonymous">
@@ -54,9 +55,9 @@
 	max-height: 100px;
 }
 .responsive {
-  width: 50%;
-  max-width: 150px;
-  height: auto;
+  height: 50%;
+width: auto;
+
 }
      </style>	
 
