--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@ width: auto;
 </script>
 	
 <div class="responsive">
-<img src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg"/>
+<img width="150px" height="100px" src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg"/>
 
 </div>	
 <br>
 	<br>
 	<br>
 <div class="responsive">
-<img src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg"/>	
+<img width="150px" height="100px" src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg"/>	
 </div>	
 
 	</body>
