--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@ width: auto;
 </script>
 	
 <div class="responsive">
-<img width="250px" height="200px" src="https://kishydreams.com/kush-in-close-up-photography-3676962.jpg"/>
+<img width="250px" height="200px" src=""/>
 
 </div>	
 <br>
 	<br>
 	<br>
 <div class="responsive">
-<img width="250px" height="200px" src="https://kishydreams.com/close-up-photo-of-kush-on-glass-container-1466335.jpg"/>	
+<img width="250px" height="200px" src=""/>	
 </div>	
 
 	</body>
